# Quant_Trade

./: .gitignore  README.md  file.txt  replay.csv
Quant_Trade/backend-go/: go.mod  go.sum
Quant_Trade/backend-go/cmd/server/: main.go
Quant_Trade/backend-go/internal/config/: config.go
Quant_Trade/backend-go/internal/grpc/: market_data_server.go
Quant_Trade/backend-go/internal/http/: server.go
Quant_Trade/backend-go/internal/hub/: hub.go  trade_hub.go
Quant_Trade/backend-go/internal/ingestor/: ingestor.go  (+2 more)
Quant_Trade/configs/: dev.yaml
Quant_Trade/core-cpp/benchmarks/: order_book_bench.cpp
Quant_Trade/core-cpp/results/: benchmark_20260611_143848.json  benchmark_20260611_145653.json  benchmark_20260612_140024.json  benchmark_20260612_140436.json
Quant_Trade/exchange-sim/: --speed  CMakeLists.txt
Quant_Trade/exchange-sim/build_debug/: Makefile  cmake_install.cmake  exchange_sim
Quant_Trade/exchange-sim/cmd/exchange/: main.cpp
Quant_Trade/exchange-sim/generators/: market_maker.cpp  noise_trader.hpp  order_generator.hpp
Quant_Trade/exchange-sim/market_data/: snapshot_publisher.hpp  trade_publisher.hpp
Quant_Trade/exchange-sim/replay/: csv_parser.hpp  event.hpp  replay_engine.hpp
Quant_Trade/exchange-sim/simulator/: event_scheduler.hpp  simulation.clock.hpp  simulation_clock.hpp
Quant_Trade/ml/data_gathering/: __init__.py  config.py  reader.py  recorder.py  replay.py  requirements.txt  schema.py  validator.py  writer.py
Quant_Trade/proto/: execution.proto  market_data.proto  order.proto  prediction.proto  risk.proto  strategy.proto
(+16 files in other folders)
